# acapy-plugin-pickup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  redis.conf  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: code-quality-check.yml  manual-publish-image.yml  publish-image.yml  publish-release.yml  tests.yml
acapy_plugin_pickup/: __init__.py  definition.py  protocol.py  valid.py
acapy_plugin_pickup/acapy/: __init__.py  error.py  message.py
acapy_plugin_pickup/protocol/: delivery.py  status.py
acapy_plugin_pickup/undelivered_queue/: base.py  in_memory.py  in_memory_queue.py  redis.py  redis_persisted_queue.py
acapy_plugin_pickup/v2_0/: delivery.py  live_mode.py  message_types.py  routes.py  status.py
docker/: Dockerfile  Dockerfile.release  README.md  default.yml  docker-compose.yml  mediator.conf.template
int/: Dockerfile.test.runner  docker-compose.yml  pyproject.toml
int/redis/: Dockerfile.test.runner  docker-compose.yml
int/redis/tests/: test_queue.py
int/tests/: conftest.py  test_deliveryrequest.py  test_forwardreceived.py  test_messagesreceived.py  test_placeholder.py  test_plugin_setup.py  test_redis.py  test_redispersistedqueue.py  test_statusrequest.py
tests/: conftest.py  test_in_memory.py  test_messages.py  test_messagesreceived.py  test_persistedqueue.py  test_redis_queue.py  test_redispersistedqueue.py  test_statusrequest.py
