[tool.poetry]
name = "acapy-plugin-pickup"
version = "0.2.0"
description = "Pickup Protocol for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Micah Peltier <micah6_8@yahoo.com>", "Peter Strobel <peter@indicio.tech>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aries-cloudagent = { version = "0.9.0", extras = ["askar", "bbs", "indy"]}
pydantic = "^1.8.1"
typing-extensions = "^3.7.4"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^23.7.0"
ruff = "^0.0.287"
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.1.5"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]