[tool.poetry]
name = "acapy-plugin-pickup"
version = "0.2.0"
description = "Pickup Protocol for ACA-Py"
authors = ["Daniel Bluhm <dbluhm@pm.me>", "Micah Peltier <micah6_8@yahoo.com>", "Peter Strobel <peter@indicio.tech>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aries-cloudagent = { version = "0.10.4", extras = ["askar"]}
pydantic = "^1.8.1"
typing-extensions = "<4.6.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.0"
black = "^24.4.2"
flake8 = "^6.0.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["setuptools", "poetry-core>=1.1.5"]
build-backend = "poetry.core.masonry.api"
