[tool.poetry]
name = "acapy-plugin-pickup-int-tests"
version = "0.1.0"
description = "Integration tests for ACA-Py Pickup Protocol Plugin"
authors = ["Micah Peltier <micah6_8@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
echo-agent = {git = "https://github.com/Indicio-tech/echo-agent.git", rev = "a82900c9e9d13c9285344c849000fe4850ff4fda", extras = ["client"]}
acapy-client = {git = "https://github.com/Indicio-tech/acapy-client.git", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^23.7.0"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core>=1.1.5"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]